# THzImage

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  meson.build
.github/workflows/: build-and-test.yml
Common/: CMakeLists.txt
Tests/: CMakeLists.txt
cmake/: helper_functions.cmake
include/THzImage/: thzImage.hpp
include/THzImage/analysis/: basicImageMetrics.hpp
include/THzImage/common/: colorspaceconverter.h  colorspaceconverter.hpp  displayserver.hpp  iImageReader.h  iImageReader.hpp  iImageTransformer.h  iImageTransformer.hpp  iImageWriter.h  iImageWriter.hpp  image.h  image.hpp  imageView.h  imageView.hpp  pixel.h  pixel.hpp
include/THzImage/handling/: asyncImageRingBuffer.hpp  bufferTransformer.hpp  imageRingBuffer.hpp
include/THzImage/io/: asyncWriter.hpp  autoFileReader.hpp  bmpReader.h  bmpReader.hpp  bmpWriter.h  bmpWriter.hpp  gifReader.hpp  gifWriter.hpp  imageDirectoryReader.hpp  imageSeriesReader.hpp  imageSeriesWriter.hpp  pngReader.h  pngReader.hpp  pngWriter.hpp  qoiReader.h  qoiReader.hpp  qoiWriter.h  qoiWriter.hpp  screenReader.h  screenReader.hpp  testImageGenerator.hpp  timedReader.hpp
include/THzImage/processing/: commonNodeBase.hpp  dataReductionNode.hpp  easyWriter.hpp  fileInputNode.hpp  iNode.hpp  imageInputNode.hpp  readerlessNodeBase.hpp  screenInputNode.hpp  testInputNode.hpp  transformerNode.hpp  wrapperNodeBase.hpp
include/THzImage/transformation/: borderTransformer.hpp  colorReduction.hpp  convolutionTransformer.hpp  convolutionTransformerBase.hpp  nullTransformer.hpp  pixelTransformer.hpp
png/: CMakeLists.txt
src/analysis/: basicImageMetrics.cpp
src/common/: pixel.cpp
src/io/: autoFileReader.cpp  bmpCommons.cpp  bmpCommons.h  bmpCommons.hpp  bmpReader.cpp  bmpWriter.cpp  gifWriter.cpp  imageDirectoryReader.cpp  pngReader.cpp  pngWriter.cpp  qoiCommons.h  qoiCommons.hpp  qoiReader.cpp  qoiWriter.cpp  screenReader.cpp  screenReaderDummy.cpp  screenReaderWayland.cpp  screenReaderWin32.cpp  screenReaderX11.cpp  testImageGenerator.cpp
src/processing/: dataReductionNode.cpp  easyWriter.cpp  fileInputNode.cpp  imageInputNode.cpp  screenInputNode.cpp  testInputNode.cpp
src/transformation/: colorReduction.cpp
subprojects/: THzCommon.wrap  microsoft-gsl.wrap
test/: CMakeLists.txt
test/analysis/: basicImageMetrics.cpp
test/common/: colorspaceconverter.cpp  image.cpp  imageView.cpp  pixel.cpp
test/handling/: asyncImageRingBuffer.cpp  bufferTransformer.cpp  imageRingBuffer.cpp
test/io/: asyncWriter.cpp  autoFileReader.cpp  bmpReader.cpp  bmpWriter.cpp  gifWriter.cpp  imageDirectoryReader.cpp  imageSeriesReader.cpp  imageSeriesWriter.cpp  pngReader.cpp  pngWriter.cpp  qoiReader.cpp  qoiWriter.cpp  screenReader.cpp  testImageGenerator.cpp  timedReader.cpp
test/processing/: dataReductionNode.cpp  easyWriter.cpp  fileInputNode.cpp  imageInputNode.cpp  mockNode.hpp  readerlessNodeBase.cpp  testInputNode.cpp  transformerNode.cpp
test/transformation/: borderTransformer.cpp  colorReduction.cpp  convolutionTransformer.cpp  convolutionTransformerBase.cpp  mockTransformer.hpp  nullTransformer.cpp  pixelTransformer.cpp
